--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,13 @@
         "buildType": "apk"
       }
     },
+
+    "preview2": {
+      "ios": {
+        "simulator": true
+      }
+    },
+
     "production": {}
   },
   "submit": {
