--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "^1.8.0",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
