--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~49.0.15",
     "expo-modules-core": "~1.5.12",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
