--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-constants": "^14.4.2",
     "expo-modules-core": "~1.5.12",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
