--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "TEST2",
+    "name": "Ideas 365",
     "slug": "TEST2",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/iconF.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashF.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,13 +20,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/iconF.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.albertlm.TEST2"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/iconF.png"
     },
     "extra": {
       "eas": {
