--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.0",
-    "expo": "~49.0.15",
+    "expo": "^49.0.22",
     "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
+    "expo-file-system": "~15.4.5",
     "expo-get-location": "^16.0.3",
     "expo-image-picker": "~14.3.2",
     "expo-modules-core": "~1.5.12",
@@ -37,7 +39,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-file-system": "~15.4.5"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
